added integation test

--- a/application/src/main/resources/application.conf
+++ b/application/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 database {
   connectionUrl = "jdbc:mysql://localhost:3306/todos"
-  connectionUrl = ${?DB_CONNECTION_STRING}
+  connectionUrl = ${?DB_CONNECTION_URL}
   password = "password"
   password = ${?DB_PASSWORD}
   user = "user"
