--- a/integration-test/src/test/resources/docker-compose.yml
+++ b/integration-test/src/test/resources/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   application:
-    image: application:latest
+    image: application:${BUILD_TAG:-latest}
     environment:
       - DB_USER=todos
       - DB_PASSWORD=password
